# power_automate_api

./: .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  compose.yaml  launch.sh
src/: cipp.rs  generic.rs  lib.rs  main.rs
