[package]
name = "power_automate_api"
version = "1.0.1"
authors = ["Alexi Peck <alexinicolaspeck@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18" }
tracing = "0.1.40"
directories = "5.0.1"
axum = { version = "0.6.20", features = ["headers", "http2", "tokio"] }
axum-server = {version = "0.5.1", features = ["tls-rustls"]}
tokio = { version = "1.34.0", default-features = false, features = ["macros", "net", "rt-multi-thread", "time", "signal"] }
tokio-native-tls = "0.3.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
parking_lot = "0.12.1"
regex = "1.10.2"